# value-simulator

./: .gitignore  CLAUDE.md  LICENSE  README.ja.md  README.md  docker-compose.yml
api/: index.py  requirements.txt
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/simulator/: agent.py  api.py  diffusion.py  engine.py  forces.py  funnel.py  jtbd.py  lifestyle.py  market.py  network.py  population.py  whatif.py
backend/tests/: test_agent.py  test_api.py  test_diffusion.py  test_engine.py  test_forces.py  test_funnel.py  test_jtbd.py  test_jtbd_agent_integration.py  test_lifestyle.py  test_market.py  test_network.py  test_population.py  test_validation.py  test_whatif.py
docs/: 01-mirofish-architecture.md  02-competitive-analysis.md  03-market-simulation-design.md  04-proposed-architecture.md  05-key-findings.md  06-sprint-plan.md  07-prd.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  playwright.config.ts
frontend/app/: globals.css  i18n-context.tsx  i18n.ts  layout.tsx  page.tsx  types.ts
frontend/app/chat/: ChatPanel.tsx
frontend/app/promo/: page.tsx
frontend/app/report/: ReportPanel.tsx
frontend/e2e/: report-charts.spec.ts  screenshots.spec.ts  simulate.spec.ts
