[project]
name = "value-simulator"
version = "0.1.0"
description = "Market adoption simulator with agent-based modeling"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "networkx>=3.0",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "scipy>=1.17.1",
    "anthropic>=0.40",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
